[gd_scene load_steps=6 format=3 uid="uid://c8lkbswqs3it"]

[ext_resource type="Texture2D" uid="uid://dqw2yfwl0cgi3" path="res://assets/spritesheets/evilcorn.png" id="1_atanc"]
[ext_resource type="Script" path="res://scenes/enemies/cornpirate.gd" id="1_iwva1"]
[ext_resource type="Script" path="res://scenes/enemies/Healthbar.gd" id="3_7pkod"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fw1yx"]
radius = 7.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4rq2u"]
radius = 89.0056

[node name="cornpirate" type="CharacterBody2D"]
script = ExtResource("1_iwva1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_atanc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_fw1yx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_4rq2u")

[node name="gunmarker" type="Marker2D" parent="."]
position = Vector2(-12, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Healthbar" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = -21.0
step = 1.0
show_percentage = false
script = ExtResource("3_7pkod")

[node name="dmg_cooldown" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="dmg_cooldown" to="." method="_on_dmg_cooldown_timeout"]
